--- a/usr/src/tools/protolist/Makefile
+++ b/usr/src/tools/protolist/Makefile
@@ -22,23 +22,29 @@
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 
 PROG=	protolist
-OBJS=	$(PROG).o
-SRCS=	$(OBJS:%.o=%.c)
+OBJS=	$(PROG).o stdusers.o
+SRCS=	$(PROG).c ../protocmp/stdusers.c
 
 include ../Makefile.tools
 
 OWNER=	root
 GROUP=	bin
 CFLAGS += $(CCVERBOSE)
+CPPFLAGS += -I../protocmp
+CLEANFILES += $(OBJS)
 
 .KEEP_STATE:
 
 all:	$(PROG)
+
+$(PROG): $(OBJS)
+	$(LINK.c) -o $@ $(OBJS) $(LDLIBS)
+	$(POST_PROCESS)
 
 install: all .WAIT $(ROOTONBLDMACHPROG)
 
@@ -46,5 +52,9 @@ lint:	lint_SRCS
 
 clean:
 	$(RM) $(CLEANFILES)
+
+%.o: ../protocmp/%.c
+	$(COMPILE.c) -o $@ $<
+	$(POST_PROCESS_O)
 
 include ../Makefile.targ
