--- a/usr/src/uts/sun4u/starfire/Makefile.rules
+++ b/usr/src/uts/sun4u/starfire/Makefile.rules
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -78,7 +77,7 @@ CLEANFILES +=	$(STARFIRE_IO)/drmach_err.c
 
 $(STARFIRE_IO)/drmach_err.c: $(SBDGENERR) $(SBD_IOCTL)
 	$(RM) $@
-	$(SBDGENERR) ESTF < $(SBD_IOCTL) > $@
+	$(SBDGENERRCMD) ESTF < $(SBD_IOCTL) > $@
 
 # inline stuff
 
