--- a/usr/src/uts/sun4u/starfire/Makefile.starfire
+++ b/usr/src/uts/sun4u/starfire/Makefile.starfire
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,8 +19,8 @@
 # CDDL HEADER END
 #
 #
-# Copyright (c) 1997-2001 by Sun Microsystems, Inc.
-# All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 #
@@ -67,7 +66,7 @@ STARFIRE_OBJS	= starfire.o
 STARFIRE_KMODS	= platmod
 STARFIRE_KMODS	+= rootnex sbus pcipsy
 STARFIRE_KMODS	+= cvc cvcredir
-STARFIRE_KMODS	+= ngdr .WAIT ngdrmach
+STARFIRE_KMODS	+= ngdr ngdrmach
 STARFIRE_KMODS	+= idn
 
 #
