6320778 UNIX03 *vsc* modified assertion vi_02.ex 139 fails, [count]. not working. 6320781 UNIX03 *vsc* modified assertion vi_03.ex 173 and 176 fail, [count]a should repeat input up to esc. 6320783 UNIX03 *vsc* modified assertions vi_04.ex 225 and 228 fail, [count]i should repeat input up to esc

--- a/usr/src/cmd/vi/port/Makefile
+++ b/usr/src/cmd/vi/port/Makefile
@@ -20,7 +20,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -62,7 +62,7 @@ POFILE= port.po
 $(XPG4) := CFLAGS += -DXPG4 -DXPG4ONLY
 
 # Include all XPG4 changes, but don't include XPG4ONLY in the XPG6 version
-$(XPG6) := CFLAGS += -DXPG4 -I$(SRC)/lib/libc/inc
+$(XPG6) := CFLAGS += -DXPG4 -DXPG6 -I$(SRC)/lib/libc/inc
 
 CPPFLAGS +=  -DUSG -DSTDIO -DVMUNIX -DTABS=8 -DSINGLE -DTAG_STACK
 CLOBBERFILES += $(LIBPROGS)
