PSARC 2005/731 hotpluggable disk support 6348407 Enable EFI partitions and device ID supports for hotpluggable devices

--- a/usr/src/uts/common/io/usb/scsa2usb/scsa2usb.conf
+++ b/usr/src/uts/common/io/usb/scsa2usb/scsa2usb.conf
@@ -19,7 +19,7 @@
 #
 # CDDL HEADER END
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 
@@ -42,7 +42,7 @@
 #
 # A record in this file has the following format:-
 # "vid=vId pid=pId rev=revision subclass=override protocol=override pm=pmvalue
-# 	removable=remvalue modesense=modesensevalue"
+#	removable=remvalue modesense=modesensevalue"
 #
 # where:
 #	vId/pId/revision: are obtained from
@@ -85,32 +85,35 @@
 #		will not respond after having their power lowered.
 #		If this is the case, the device should have power
 #		management disabled by setting this to "off".
-# 
-#	remvalue - "false" if the device's removable media information
-#		in its hardware inquiry data is not to be ignored. This
-#		is the only legal value for this parameter. There is a
-#		removable media status bit in the USB storage device's
-#		inquiry data to indicate if the device has a media that
-#		can be removed. Usually only devices like floppy drives
+#
+#	remvalue - "true" if the device's removable media information
+#		in its hardware inquiry data is to be overridden. This
+#		is the only legal value for this parameter. 
+#
+#	NOTE: In previous releases, the removable media information 
+#		was always overridden and the only legal value was "false". 
+#
+#		There is a removable media status bit in the USB storage
+#		device's inquiry data to indicate if the device has a media
+#		that can be removed. Usually only devices like floppy drives
 #		or CD/DVD drives that really have a removable media can
 #		have this bit set and be called removable media devices.
-#		Solaris treats removable media devices and non-
-#		removable media devices differently. Refer to "System
-#		Administration Guide: Devices and File Systems" -
-#		"Using USB Devices (Tasks)" - "Using USB Mass Storage
-#		Devices" section for the differences in system behavior
-#		of treating removable media devices and non-removable
-#		media devices.
+#		Solaris treats removable media devices and non-removable
+#		media devices differently. Refer to "System	Administration
+#		Guide: Devices and File Systems" - "Using USB Devices
+#		(Tasks)" - "Using USB Mass Storage Devices" section for
+#		the differences in system behavior of treating removable
+#		media devices and non-removable	media devices.
 #
-#		By default, Solaris will treat all USB storage devices
-#		as removable media devices irrespective of the removable
-#		media bit value. The advantage is a consistent user
-#		experience. In some cases this may be undesirable and
-#		the removable media bit value should not be ignored. By
-#		setting "remvalue" to "false", the information provided
-#		by the device is preserved. Consequently a USB hard disk
-#		is treated as a real hard disk and will show in
-#		format(1M) disk list and no longer in rmformat(1M) list.
+#		By default, Solaris will treat USB storage devices as
+#		removable media devices depending on the removable media
+#		bit value. In some cases this may be undesirable and the
+#		behavior of the previous releases should be preserved. In
+#		this case the removable media bit value should be overridden.
+#		By setting "remvalue" to "true", the information provided
+#		by the device is ignored. Consequently a USB hard disk
+#		is treated as a removable media disk and will not show in
+#		format(1M) disk list.
 #
 #	modesensevalue - "false" if the device cannot handle mode sense
 #		requests. This is the only legal value for this
