PSARC/2006/043 ls -V PSARC/2006/047 acl_totext PSARC/2006/048 Compact chmod ACL syntax 6362641 tar does not store ACLs in a suitable format 6379909 Need compact ACL utility support for NFSv4/ZFS

--- a/usr/src/lib/libsec/Makefile
+++ b/usr/src/lib/libsec/Makefile
@@ -20,7 +20,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -41,7 +41,9 @@ install :=	TARGET= install
 lint :=		TARGET= lint
 
 MSGFILES=	common/acltext.c common/aclutils.c common/aclmode.c \
-		common/aclsort.c common/aclcheck.c
+		common/aclsort.c common/aclcheck.c common/acl_lex.l \
+		common/acl.y
+
 POFILE=		libsec.po
 
 .KEEP_STATE:
