PSARC 2006/054 DTrace JNI Binding 6384263 PSARC 2006/054 DTrace JNI Binding

--- a/usr/src/lib/Makefile
+++ b/usr/src/lib/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -85,6 +84,7 @@ SUBDIRS += \
 	libadm			\
 	libctf			\
 	libdtrace		\
+	libdtrace_jni		\
 	libcurses		\
 	libgen			\
 	libgss			\
@@ -307,6 +307,7 @@ HDRSUBDIRS= libaio	\
 	libdhcpsvc	\
 	libdhcputil	\
 	libdtrace	\
+	libdtrace_jni	\
 	libeti		\
 	libgen		\
 	libwanboot	\
@@ -431,6 +432,7 @@ libdhcpsvc:	libinetutil
 libdhcputil:	libinetutil
 libdladm:	libdlpi libdevinfo
 libdtrace:	libproc libgen libctf
+libdtrace_jni:	libuutil libdtrace
 libefi:		libuuid
 $(CLOSED_BUILD)$(CLOSED)/lib/libelfsign: \
 			$(CLOSED)/lib/libike libcryptoutil pkcs11
