--- a/usr/src/uts/sun4u/Makefile.sun4u.shared
+++ b/usr/src/uts/sun4u/Makefile.sun4u.shared
@@ -474,9 +474,9 @@ CPU_KMODS	+= cheetah cheetahplus jalapeno serrano spitfire hummingbird
 #	sun4u 'TOD' Modules (/platform/.../kernel/tod):
 #
 TOD_KMODS	+= todds1287 todds1337 todmostek todstarfire 
-TOD_KMODS	+= todm5819 todblade todm5823 todbq4802
+TOD_KMODS	+= todm5819 todblade todbq4802
 
-$(CLOSED_BUILD)CLOSED_TOD_KMODS	+= todm5819p_rmc todsg todstarcat
+$(CLOSED_BUILD)CLOSED_TOD_KMODS	+= todm5819p_rmc todsg todstarcat todm5823
 
 #
 #	Performance Counter BackEnd Modules (/usr/kernel/pcbe):
