6306623  lib/libpcp should be added to usr/src/Makefile.lint SUBDIRS

--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -403,6 +403,7 @@ sparc_SUBDIRS= \
 	cmd/wrsmstat \
 	lib/libwrsmconf \
 	lib/wrsm \
+	lib/libpcp \
 	stand
 
 $(CLOSED_BUILD)COMMON_SUBDIRS += $(CLOSED)/cmd/mtst
