PSARC/2005/375 PCI Hotplug Extensions for PCIe PSARC/2006/037 PCI Express Hotplug Framework Interrupt Interfaces 6379464 Integrate PSARC/2005/375 for SPARC PCI Express Hotplug Support 5049969 Make efcode' PCI configurator as the default configurator for SPARC platforms

--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -684,6 +684,8 @@ PCIHPNEXUS_OBJS += pcihp.o
 
 PCIEHPCNEXUS_OBJS += pciehpc.o
 
+PCISHPC_OBJS += pcishpc.o
+
 PCICFG_OBJS += pcicfg.o
 
 OPENEEPR_OBJS += openprom.o
