--- a/usr/src/uts/sparc/fcode/Makefile
+++ b/usr/src/uts/sparc/fcode/Makefile
@@ -20,15 +20,16 @@
 # CDDL HEADER END
 #
 #
-# uts/sun4u/fcodem/Makefile
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# uts/sparc/fcode/Makefile
+#
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 #
-#	This makefile drives the production of the ebus driver kernel module
+#	This makefile drives the production of the fcode driver kernel module
 #
-#	sun4u implementation architecture dependent
+#	sparc implementation architecture dependent
 #
 
 #
@@ -39,22 +40,28 @@ UTSBASE	= ../..
 #
 #	Define the module and object file sets.
 #
-MODULE		= fcodem
-OBJECTS		= $(FCODEM_OBJS:%=$(OBJS_DIR)/%)
-LINTS		= $(FCODEM_OBJS:%.o=$(LINTS_DIR)/%.ln)
-ROOTMODULE	= $(ROOT_PSM_MISC_DIR)/$(MODULE)
+MODULE		= fcode
+OBJECTS		= $(FCODE_OBJS:%=$(OBJS_DIR)/%)
+LINTS		= $(FCODE_OBJS:%.o=$(LINTS_DIR)/%.ln)
+ROOTMODULE	= $(ROOT_DRV_DIR)/$(MODULE)
+CONF_SRCDIR	= $(UTSBASE)/sun4/io/efcode
 
 #
 #	Include common rules.
 #
-include $(UTSBASE)/sun4u/Makefile.sun4u
+include $(UTSBASE)/sparc/Makefile.sparc
 
 #
 #	Define targets
 #
-ALL_TARGET	= $(BINARY)
+ALL_TARGET	= $(BINARY) $(SRC_CONFFILE)
 LINT_TARGET	= $(MODULE).lint
-INSTALL_TARGET	= $(BINARY) $(ROOTMODULE)
+INSTALL_TARGET	= $(BINARY) $(ROOTMODULE) $(ROOT_CONFFILE)
+
+#
+#	Include sun4 specific headers files
+#
+INC_PATH	+= -I$(UTSBASE)/sun4
 
 # Turn this on once compiler understands v9 in it's backend
 #INLINES		+= $(UTSBASE)/sun4/io/fcode.il
@@ -93,4 +100,4 @@ install:	$(INSTALL_DEPS)
 #
 #	Include common targets.
 #
-include $(UTSBASE)/sun4u/Makefile.targ
+include $(UTSBASE)/sparc/Makefile.targ
