--- a/usr/src/uts/sparc/fcodem/Makefile
+++ b/usr/src/uts/sparc/fcodem/Makefile
@@ -20,16 +20,16 @@
 # CDDL HEADER END
 #
 #
-# uts/sun4u/pcicfg.e/Makefile
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# uts/sparc/fcodem/Makefile
+#
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 #
-#	This makefile drives the production of the EFCode Enabled
-#	PCI Configurator.
+#	This makefile drives the production of the fcodem misc kernel module
 #
-#	sun4u implementation architecture dependent
+#	sparc implementation architecture dependent
 #
 
 #
@@ -40,15 +40,15 @@ UTSBASE	= ../..
 #
 #	Define the module and object file sets.
 #
-MODULE		= pcicfg.e
-OBJECTS		= $(PCICFG_E_OBJS:%=$(OBJS_DIR)/%)
-LINTS		= $(PCICFG_E_OBJS:%.o=$(LINTS_DIR)/%.ln)
-ROOTMODULE	= $(ROOT_PSM_MISC_DIR)/$(MODULE)
+MODULE		= fcodem
+OBJECTS		= $(FCODEM_OBJS:%=$(OBJS_DIR)/%)
+LINTS		= $(FCODEM_OBJS:%.o=$(LINTS_DIR)/%.ln)
+ROOTMODULE	= $(ROOT_MISC_DIR)/$(MODULE)
 
 #
 #	Include common rules.
 #
-include $(UTSBASE)/sun4u/Makefile.sun4u
+include $(UTSBASE)/sparc/Makefile.sparc
 
 #
 #	Define targets
@@ -57,9 +57,13 @@ ALL_TARGET	= $(BINARY)
 LINT_TARGET	= $(MODULE).lint
 INSTALL_TARGET	= $(BINARY) $(ROOTMODULE)
 
+#
+#	Include sun4 specific headers files
+#
+INC_PATH	+= -I$(UTSBASE)/sun4
 
 # Turn this on once compiler understands v9 in it's backend
-#INLINES		+= $(UTSBASE)/sun4u/io/pcicfg.il
+#INLINES		+= $(UTSBASE)/sun4/io/fcode.il
 
 #
 # lint pass one enforcement
@@ -69,12 +73,7 @@ CFLAGS += $(CCVERBOSE)
 #
 # Turn on doubleword alignment for 64 bit registers
 #
-CFLAGS += -dalign -DPCICFG_INTERPRET_FCODE
-
-#
-#	Dependency
-LDFLAGS += -dy -Nmisc/busra -Nmisc/hpcsvc -Nmisc/fcpci -Nmisc/fcodem
-
+CFLAGS += -dalign
 
 #
 #	Default build targets.
@@ -100,4 +99,4 @@ install:	$(INSTALL_DEPS)
 #
 #	Include common targets.
 #
-include $(UTSBASE)/sun4u/Makefile.targ
+include $(UTSBASE)/sparc/Makefile.targ
