--- a/usr/src/uts/i86pc/cpu/amd_opteron/ao_mca_disp.in
+++ b/usr/src/uts/i86pc/cpu/amd_opteron/ao_mca_disp.in
@@ -1,9 +1,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -415,7 +414,7 @@ mask off = AMD_BANK_STAT_CECC, AMD_BANK_STAT_UECC
 #       ------- -------	-------	-------	---------------	------- ------- -----
 code =	0000	bus	src	0	ird		mem	lg	-
 
-panic = always
+panic = ifmce
 flags =
 
 #
@@ -586,7 +585,7 @@ mask off = AMD_BANK_STAT_CECC, AMD_BANK_STAT_UECC
 #       ------- -------	-------	-------	---------------	------- ------- -----
 code =	0000	bus	src	0	rd/pf		mem/io	lg	-
 
-panic = always
+panic = ifmce
 flags =
 
 #
@@ -605,7 +604,7 @@ mask off = AMD_BANK_STAT_CECC, AMD_BANK_STAT_UECC
 #       ------- -------	-------	-------	---------------	------- ------- -----
 code =	0000	bus	src	0	rd/wr		mem/io	lg	-
 
-panic = always
+panic = ifmce
 flags =
 
 #
@@ -744,7 +743,7 @@ mask off = AMD_BANK_STAT_CECC, AMD_BANK_STAT_UECC
 #       ------- -------	-------	-------	---------------	------- ------- -----
 code  = 0101	tlb	-	-	-		-	lg	gen
 
-panic = always
+panic = ifmce
 flags = 
 
 # ---
