6388986 Erie uses Ontario-specific topology files 6392166 cpu_info.core_id kstat is broken on sparcv9 6392223 Need to remove CPU topology for Ontario

--- a/usr/src/lib/fm/topo/modules/sun4v/ioboard/Makefile
+++ b/usr/src/lib/fm/topo/modules/sun4v/ioboard/Makefile
@@ -25,6 +25,7 @@
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
 
-SUBDIRS = chip hostbridge ioboard pcibus
+CLASS = arch
+ARCH = sun4v
 
-include ../../../Makefile.subdirs
+include ../../sun4/ioboard/Makefile.iob
