PSARC 2005/673 dis(1) options and libdisasm.so.1 5034117 disassembler needs work 6237338 dis picks symbols inconsistently 6241243 disassembler options need to be updated post-1990 6241251 'dis -[Dd]' needs some surgery 6241264 need to move disassembler into a library 6294758 cafe sgs demangler should be torched

--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -101,6 +101,7 @@ COMMON_SUBDIRS = \
 	cmd/devmgmt \
 	cmd/dfs.cmds \
 	cmd/diff3 \
+	cmd/dis \
 	cmd/dirname \
 	cmd/diskscan \
 	cmd/dispadmin \
@@ -302,6 +303,7 @@ COMMON_SUBDIRS = \
 	lib/libdhcpdu \
 	lib/libdhcpsvc \
 	lib/libdhcputil \
+	lib/libdisasm \
 	lib/libdiskmgt \
 	lib/libdladm \
 	lib/libdlpi \
