--- a/usr/src/cmd/mdb/intel/Makefile.kmdb
+++ b/usr/src/cmd/mdb/intel/Makefile.kmdb
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,10 +19,10 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-# ident	"%Z%%M%	%I%	%E% SMI"
+#ident	"%Z%%M%	%I%	%E% SMI"
 #
 
 PROMSRCS += \
@@ -34,9 +33,6 @@ PROMSRCS += \
 	prom_putchar.c
 
 KMDBSRCS += \
-	bits.c \
-	dis_tables.c \
-	inteldis.c \
 	kaif.c \
 	kaif_activate.c \
 	kaif_idt.c \
@@ -60,7 +56,6 @@ KCTLSRCS += \
 CTXOFFUSERS = \
 	kmdb_setcontext.o
 
-OSINCDIRS += $(SRC)/common/dis/i386
 CPPFLAGS += -DDIS_TEXT
 
 $(CTXOFFUSERS) $(CTXOFFUSERS:%.o=%.ln): kmdb_context_off.h
@@ -86,16 +81,9 @@ MAPFILE_SOURCES = \
 	../../kmdb/kmdb_dpi_isadep.h \
 	$(MAPFILE_SOURCES_$(MACH))
 
-%.o: $(SRC)/common/dis/i386/%.c
-	$(COMPILE.c) $<
-	$(CTFCONVERT_O)
-
 %.o: ../../../../../uts/intel/promif/%.c
 	$(COMPILE.c) $<
 	$(CTFCONVERT_O)
-
-%.ln: $(SRC)/common/dis/i386/%.c
-	$(LINT.c) -c $<
 
 %.ln: ../../../../../uts/intel/promif/%.c
 	$(LINT.c) -c $<
