--- a/usr/src/cmd/mdb/sun4v/v9/kmdb/Makefile
+++ b/usr/src/cmd/mdb/sun4v/v9/kmdb/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -48,6 +47,8 @@ include ../../../../Makefile.cmd.64
 include ../../../sparc/Makefile.sparcv9
 include ../../../sparc/Makefile.kmdb.64
 include ../../../Makefile.kmdb
+
+STANDLIBS += $(ROOT)/usr/lib/sparcv9/libstanddisasm.so
 
 KMDB_FPTEST = \
 	$(FINDFP) -x kaif_resume -x kaif_trap_common $@
