--- a/usr/src/cmd/sgs/sgsdemangler/Makefile.targ
+++ b/usr/src/cmd/sgs/sgsdemangler/Makefile.targ
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,18 +19,11 @@
 # CDDL HEADER END
 #
 #
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Use is subject to license terms.
+#
 #ident	"%Z%%M%	%I%	%E% SMI"
 #
-# Copyright (c) 1998,2001 by Sun Microsystems, Inc.
-# All rights reserved.
-
-objs/cafe_dem.o: \
-		../common/cafe_dem.y ../common/cafe_dem.h ../common/dem.h
-		yacc ../common/cafe_dem.y
-		$(COMPILE.c) -I../common -c y.tab.c -o $@
-
-objs/dem.o:	../common/dem.c
-		$(COMPILE.c) -I../common -c ../common/dem.c -o $@
 
 objs/demangle.o: \
 		../common/demangle.c
