PSARC/2005/507 Solaris audio driver for ATI IXP400 6301905 Want support for Realtek/ATI Express AC'97 codec 6367508 setting playback interrupt rate to small value for audio driver may panic system

--- a/usr/src/uts/i86pc/Makefile.i86pc.shared
+++ b/usr/src/uts/i86pc/Makefile.i86pc.shared
@@ -18,6 +18,7 @@
 #
 # CDDL HEADER END
 #
+
 #
 # uts/i86pc/Makefile.i86pc
 #
@@ -266,6 +267,7 @@ DRV_KMODS	+= power
 $(CLOSED_BUILD)CLOSED_DRV_KMODS		+= ata
 $(CLOSED_BUILD)CLOSED_DRV_KMODS		+= audiovia823x
 $(CLOSED_BUILD)CLOSED_DRV_KMODS		+= audioens
+$(CLOSED_BUILD)CLOSED_DRV_KMODS		+= audioixp
 $(CLOSED_BUILD)CLOSED_DRV_KMODS		+= bmc
 $(CLOSED_BUILD)CLOSED_DRV_KMODS_32	+= bscbus
 $(CLOSED_BUILD)CLOSED_DRV_KMODS_32	+= bscv
