--- a/usr/src/uts/sparc/Makefile.sparc.shared
+++ b/usr/src/uts/sparc/Makefile.sparc.shared
@@ -267,6 +267,7 @@ DRV_KMODS	+= i8042 kb8042 mouse8042
 DRV_KMODS	+= fcode
 
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= audioens
+$(CLOSED_BUILD)CLOSED_DRV_KMODS	+= audioixp
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= audiovia823x
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= chxge
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= dad
