6377640 fmd build can try to re-install .so links as directories 6390114 fmd asru cache recreation flawed with fix for 6369961 6390205 fmd publishing list.isolated for cases that were never solved 6390232 fmadm repair <fmri> can lead to surprises 6390296 fmd dumps core when stopping during BFU

--- a/usr/src/cmd/fm/fmd/Makefile.fmd
+++ b/usr/src/cmd/fm/fmd/Makefile.fmd
@@ -215,7 +215,7 @@ $(ROOTVDIR): $(ROOT)/var/fm
 $(ROOTVSUB): $(ROOTVDIR)
 	$(INS.dir)
 
-$(ROOT)/usr/lib/%:
+$(ROOT)/usr/lib/fm:
 	$(INS.dir)
 
 $(ROOTPDIR): $(ROOT)/usr/lib/fm
