PSARC 2006/029 Hypervisor Versioning API FWARC 2006/052 sun4v version API update FWARC 2006/137 sun4v version CIF name change 6347011 enhance sun4v solaris to support versioning API 6306782 Backout check for unsupported Niagara 1.x processor

--- a/usr/src/uts/sun4v/Makefile.files
+++ b/usr/src/uts/sun4v/Makefile.files
@@ -43,6 +43,7 @@ CORE_OBJS +=	forthdebug.o
 CORE_OBJS +=	hardclk.o
 CORE_OBJS +=	hat_sfmmu.o
 CORE_OBJS +=	hat_kdi.o
+CORE_OBJS +=	hsvc.o
 CORE_OBJS +=	mach_cpu_states.o
 CORE_OBJS +=	mach_ddi_impl.o
 CORE_OBJS +=    mach_descrip.o
