--- a/usr/src/cmd/mdb/Makefile.kmdb.targ
+++ b/usr/src/cmd/mdb/Makefile.kmdb.targ
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -41,6 +40,7 @@ clean.lint:
 
 clean:
 	$(RM) $(OBJS) $(KCTLOBJS) $(PROG).core $(MAPFILE)
+	$(RM) $(MAPFILE_INTERMEDIATE)
 	$(RM) kmdb_terminfo.c kmdb_modlinktest.c kmdb_modlinktest.o
 	$(RM) kaif_off.h kmdb_context_off.h
 	$(RM) mdb_lex.c mdb_grammar.c mdb_grammar.h y.tab.h y.tab.c y.output
@@ -59,10 +59,11 @@ kmdb_terminfo.c: 	../../../common/mdb/mdb_termio.c \
 	    -t ../../../common/mdb/mdb_termio.c \
 	    $(SUPPORTED_TERMS) > $@
 
-$(MAPFILE): $(MAPFILE_SOURCES) $(MAPFILE_TEMPLATE)
-	$(HDR2MAP) -t $(MAPFILE_TEMPLATE) $(MAPFILE_SOURCES) >$@.i
-	$(CPP) -P $(SACPPFLAGS) <$@.i >$@
-	$(RM) $@.i
+$(MAPFILE_INTERMEDIATE): $(MAPFILE_SOURCES) $(MAPFILE_TEMPLATE)
+	$(HDR2MAP) -t $(MAPFILE_TEMPLATE) $(MAPFILE_SOURCES) >$@
+
+$(MAPFILE): $(MAPFILE_INTERMEDIATE)
+	$(CPP) -P $(SACPPFLAGS) <$(MAPFILE_INTERMEDIATE) >$@
 
 mdb_lex.c: ../../../common/mdb/mdb_lex.l mdb_grammar.h
 	$(LEX) $(LFLAGS) ../../../common/mdb/mdb_lex.l > $@
@@ -79,8 +80,9 @@ mdb_grammar.h mdb_grammar.c: ../../../common/mdb/mdb_grammar.y
 
 kaif_off.h := CPPFLAGS += $(SACPPCFLAGS)
 
-kmdb_modlinktest.c: $(MAPFILE)
-	$(MAP2LINKTEST) <$(MAPFILE) >$@
+kmdb_modlinktest.c: $(MAPFILE_INTERMEDIATE)
+	$(MAP2LINKTEST) <$(MAPFILE_INTERMEDIATE) >$@
+	$(CPP) -P $(SACPPFLAGS) <$(MAPFILE_INTERMEDIATE) >$(MAPFILE)
 
 #
 # Dynamic rules for object construction
