--- a/usr/src/uts/sun4v/ontario/Makefile
+++ b/usr/src/uts/sun4v/ontario/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -21,7 +20,7 @@
 #
 #
 # uts/sun4v/ontario/Makefile
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -69,12 +68,15 @@ modlintlib:   $(ONTARIO_KMODS)
 
 IMPLEMENTED_PLATFORM	= SUNW,Sun-Fire-T200
 LINKED_PLATFORMS	= SUNW,Sun-Fire-T1000
+LINKED_PLATFORMS	+= SUNW,Netra-T2000
+PPLINKED_PLATFORMS	= SUNW,Netra-T2000
 
 install:	$(ROOT_ONTARIO_DIR) $(USR_ONTARIO_DIR) \
 		$(USR_ONTARIO_SBIN_DIR) \
 		$(USR_ONTARIO_LIB_DIR) \
 		$(ROOT_ONTARIO_LIB_DIR) \
 		$(LINKED_PLATFORMS:%=$(USR_PLAT_DIR)/%) \
+		$(PPLINKED_PLATFORMS:%=$(ROOT_PLAT_DIR)/%) \
 		.WAIT $(ONTARIO_KMODS)
 
 $(ONTARIO_KMODS):	FRC
