6223674 - %fsr not completely cleared for process start up 6328222 - sun4v cpu_module interface should allow a CPU specific fp_zero interface

--- a/usr/src/uts/sun4/Makefile.files
+++ b/usr/src/uts/sun4/Makefile.files
@@ -104,5 +104,5 @@ INC_PATH	+= -I$(UTSBASE)/sun4
 # since only C headers are included when #defined(lint) is true.
 #
 ASSYM_DEPS	+= genalign.o copy.o ip_ocsum.o
-ASSYM_DEPS	+= mach_float.o common_asm.o
+ASSYM_DEPS	+= common_asm.o
 ASSYM_DEPS	+= proc_init.o subr.o xc.o
