--- a/usr/src/uts/sun4v/Makefile.files
+++ b/usr/src/uts/sun4v/Makefile.files
@@ -93,7 +93,7 @@ SPECIAL_OBJS += intrq.o
 #			driver modules
 #
 ROOTNEX_OBJS	+= mach_rootnex.o
-PX_OBJS		+= px_asm_4v.o px_err.o px_lib4v.o px_tools_4v.o
+PX_OBJS		+= px_lib4v.o px_err.o px_tools_4v.o px_hcall.o
 FPC_OBJS	+= fpc-impl-4v.o fpc-asm-4v.o
 TRAPSTAT_OBJS	+= trapstat.o
 
