6351422 px incorrectly handles Fire Common Block split 6357304 Fire jbus_jtep should cause nexus to panic system in Ontario 6377722 Fire driver panics on a ce_async which is a correctable error 6399796 Incorrect checking pci_config_setup() returns code in nexus driver

--- a/usr/src/uts/sun4/Makefile.files
+++ b/usr/src/uts/sun4/Makefile.files
@@ -73,7 +73,7 @@ CORE_OBJS +=	xc.o
 #			driver modules
 #
 ROOTNEX_OBJS	+= rootnex.o
-PX_OBJS		+= px.o px_cb.o px_debug.o px_devctl.o px_dma.o \
+PX_OBJS		+= px.o px_debug.o px_devctl.o px_dma.o \
 		   px_fdvma.o px_fm.o px_ib.o px_intr.o px_mmu.o px_msi.o \
 		   px_msiq.o px_pec.o px_space.o px_tools.o px_util.o \
 		   pcie_pwr.o
