5079311 inetd needs to support selected address binding 6390546 lp cancel command doesn't work if print service is bound to localhost 6390547 print library should be lint-clean

--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -315,6 +315,7 @@ COMMON_SUBDIRS = \
 	lib/libgen \
 	lib/libgss \
 	lib/libinetcfg \
+	lib/libinetsvc \
 	lib/libinetutil \
 	lib/libipmp \
 	lib/libipp \
@@ -366,6 +367,7 @@ COMMON_SUBDIRS = \
 	lib/pam_modules \
 	lib/passwdutil \
 	lib/pkcs11 \
+	lib/print \
 	lib/fm \
 	lib/udapl \
 	psm \
