6343608 ZFS file range locking 6365101 zfs: copying from NFS to ZFS makes ksh response very sluggish 6393003 System hung -- out of memory (kernel va) due to zil's itx_t's 6393671 deadlock between dnlc_reduce_cache() and zfs_zget() 6399298 system seems to be spinning in dnlc_reduce_cache()

--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -905,6 +905,7 @@ ZFS_OBJS +=			\
 	zfs_ioctl.o		\
 	zfs_log.o		\
 	zfs_replay.o		\
+	zfs_rlock.o		\
 	zfs_vfsops.o		\
 	zfs_vnops.o		\
 	zfs_znode.o		\
