--- a/usr/src/cmd/tnf/prex/sparc/Makefile
+++ b/usr/src/cmd/tnf/prex/sparc/Makefile
@@ -24,43 +24,10 @@
 # Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-# cmd/tnf/prex/Makefile
-#
+# cmd/tnf/prex/sparc/Makefile
 
-PROG=  prex
+include ../Makefile.com
+CFLAGS += -I.. -I.
+LINTFLAGS += -I.. -I.
 
-include	../../Makefile.cmd
-
-POFILE=prex.po
-POFILES=cmd.po fcn.po list.po main.po new.po prbk.po source.po spec.po util.po
-
-SUBDIRS = $(MACH)
-$(BUILD64)SUBDIRS += $(MACH64)
-
-all	:=	TARGET = all
-install	:=	TARGET = install
-clean	:=	TARGET = clean
-clobber	:=	TARGET = clobber
-lint	:=	TARGET = lint
-
-.KEEP_STATE:
-
-all:    $(SUBDIRS)
-
-clean clobber lint: 	$(SUBDIRS)
-
-install:	$(SUBDIRS)
-	-$(RM) $(ROOTPROG)
-	-$(LN) $(ISAEXEC) $(ROOTPROG)
-
-
-$(SUBDIRS):	FRC
-	@cd $@; pwd; $(MAKE) $(TARGET)
-
-$(POFILE):	$(POFILES)
-	rm -f $@
-	cat $(POFILES) > $@
-
-FRC:
-
-include	../../Makefile.targ
+install: all $(ROOTPROG32)
