6404206 mega-lint errors with pcitool userland binary (missing file)

--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -387,6 +387,7 @@ COMMON_SUBDIRS = \
 $(CLOSED_BUILD)COMMON_SUBDIRS += \
 	$(CLOSED)/cmd/cmd-inet/usr.lib/in.iked \
 	$(CLOSED)/cmd/pax \
+	$(CLOSED)/cmd/pcitool \
 	$(CLOSED)/cmd/sed_xpg4 \
 	$(CLOSED)/cmd/smartcard \
 	$(CLOSED)/cmd/tail \
